@@ -1,5 +1,9 @@
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
+	- Add a new iter.times(n) helper to generate n loops.
+
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
 	- Strip redundant semi-colon.
 
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
